Fix: Issue with dropdown

--- a/Resources/Public/Editor.css
+++ b/Resources/Public/Editor.css
@@ -32,13 +32,18 @@
 .x1teoei8{margin:-20px}
 .x1ghz6dp{margin:0}
 .xqjkn27{margin:var(--spacing-Full) auto 0}
+.xcfiqih{margin:var(--spacing-Full) calc(var(--spacing-Full) * -1) 0!important}
 .x1jnhg2m{margin:var(--spacing-GoldenUnit)}
 .xs5loj3{padding:0 0 0 var(--fontSize-Base)}
 .x1t8ecn8{padding:0 14px 0 0}
+.xhkptzh{padding:0 var(--fontSize-Base)}
+.x1732f5w{padding:0!important}
 .x1717udv{padding:0}
+.xzdscax{padding:var(--spacing-Full)!important}
 .x1i724xb{padding:var(--spacing-Full)}
 .xedylmv{padding:var(--spacing-Quarter) var(--spacing-Half)}
 .x1ly45rb:where(*)>*{grid-area:content}
+.x11vc74w:focus{background:var(--colors-ContrastBrightest)}
 }
 @layer priority3{
 .xcns5ij{border-bottom:1px solid var(--colors-ContrastDark)}
@@ -53,6 +58,7 @@
 .xus49la{outline:2px solid var(--colors-Warn)}
 .xzd0ubt{outline:none!important}
 .x1a2a7pz{outline:none}
+.x8wvn0y{outline:var(--colors-ContrastNeutral) solid 1px}
 .xb3r6kr{overflow:hidden}
 .xt970qd{padding-block:0}
 .x1ku5rj1{place-items:center}
@@ -63,10 +69,14 @@
 .x1fma8x5{transition:opacity var(--transition-Default) ease,margin-left var(--transition-Default) ease var(--transition-Default)}
 .xc8avi6{transition:opacity var(--transition-Default),transform var(--transition-Default) ease}
 .x2lu7ux{transition:opacity var(--transition-Default)}
+.xtkkc6t:is(*)>.react-colorful__last-control{border-radius:0 0 2px 2px!important}
+.x17io97:is(*)>.react-colorful__saturation{border-radius:2px 2px 0 0!important}
 .x1curdr6:where(:hover,:focus){outline:0}
 .xkwbyna:focus-visible{outline:0}
 .xvvq1ej:focus-visible{outline:1px solid var(--colors-PrimaryBlue)!important}
+.x149ef6p:is(*)~svg{transition:color var(--transition-Default)}
 .xip2jzm:focus{outline:1px solid var(--colors-PrimaryBlue)}
+.x1uvtmcs:focus{outline:none}
 }
 @layer priority4{
 .x6s0dn4{align-items:center}
@@ -75,6 +85,7 @@
 .xjyslct{appearance:none}
 .x1plog1{aspect-ratio:1}
 .x1f7gzso{aspect-ratio:var(--aspectRatio)}
+.xr5ldyu{background-color:var(--backgroundColor)}
 .xzyrq3l{background-color:var(--colors-ContrastDarker)}
 .x1ndo24d{background-color:var(--colors-PrimaryBlue)}
 .xe8odd5{box-shadow:0 20px 40px #0006}
@@ -88,13 +99,16 @@
 .x1h6gzvc{cursor:not-allowed}
 .x1ypdohk{cursor:pointer}
 .x1ed109x{cursor:text}
+.x1jn3k19{cursor:var(--cursor)}
 .x1lliihq{display:block}
+.xjp7ctv{display:contents}
 .x78zum5{display:flex}
 .xrvj5dj{display:grid}
 .x1s85apg{display:none}
 .x117rol3{fill:currentColor}
 .xdt5ytf{flex-direction:column}
 .x15zctf7{flex-direction:row-reverse}
+.x1a02dak{flex-wrap:wrap}
 .xwsyq91{font-size:20px}
 .x1qlqyl8{font-size:inherit}
 .xk07rqz{font-size:var(--fontSize-Base)}
@@ -123,12 +137,14 @@
 .xlyipyv{text-overflow:ellipsis}
 .x1a33avv{transform:scale(.5)}
 .x1xih9zl{transform:translate(-50%,calc(-100% - 6px))}
+.x1dpvuo6{transform:translateX(-100%) translateX(var(--dropdown-header-width))}
 .x1uosm7l{transform:var(--transform)}
 .x87ps6o{user-select:none}
 .xuxw1ft{white-space:nowrap}
 .x1vjfegm{z-index:1}
 html:not([dir='rtl']) .x1p9coah:focus-visible{box-shadow:-14px 0 0 0 var(--colors-ContrastNeutral),-14px 0 0 1px var(--colors-PrimaryBlue),0 0 0 1px var(--colors-PrimaryBlue)}
 html[dir='rtl'] .x1p9coah:focus-visible{box-shadow:14px 0 0 0 var(--colors-ContrastNeutral), 14px 0 0 1px var(--colors-PrimaryBlue), 0 0 0 1px var(--colors-PrimaryBlue)}
+.x166kiew:is(*)~svg{color:#000!important}
 .x1yasepr:focus-visible{color:inherit!important}
 .x1sv5n3t:where(:hover,:focus){color:var(--colors-PrimaryBlue)!important}
 .x1p3htkq:is(:hover,:focus)>svg{opacity:1}
@@ -137,15 +153,20 @@ html[dir='rtl'] .x1p9coah:focus-visible{box-shadow:14px 0 0 0 var(--colors-Contr
 .x108nfvm:where(*)>svg{opacity:var(--1ifsx55)}
 .x1ygtta1:not(:hover)>*{opacity:var(--1lsze8t)}
 .xvszx66:where(*)>*{pointer-events:none}
+.x1awz5i3:focus{color:var(--colors-ContrastDarkest)}
 .xch2mbi:active{cursor:grabbing}
 }
 @layer priority5{
 .xra8837{border-bottom-right-radius:2px}
+.x5es6uu{border-top-color:var(--borderTopColor)}
 .xja2y4p{border-top-right-radius:2px}
+.xqf06dz{border-top-style:var(--borderTopStyle)}
+.x1pntfgx{border-top-width:var(--borderTopWidth)}
 .x1n7iir3{bottom:-7px}
 .x5yr21d{height:100%}
 .x1v9usgg{height:14px}
 .xjm9jq1{height:1px}
+.x1gnnpzl{height:30px}
 .xmydgjh{height:65%}
 .xwzfr38{height:80px}
 .xt7dq6l{height:auto}
@@ -154,18 +175,19 @@ html[dir='rtl'] .x1p9coah:focus-visible{box-shadow:14px 0 0 0 var(--colors-Contr
 .x1i66d86{height:var(--spacing-GoldenUnit)}
 .xcf9131{left:-7px}
 .x1nrll8i{left:50%}
-.xvcle9j{left:auto!important}
 .x1yg5f08{margin-bottom:-1.1em}
 .x1b973y9{margin-left:-7px}
 .x5jszgg{margin-left:calc(-15% + 2px)}
 .xd2cifw{margin-left:calc((var(--spacing-Quarter) + var(--spacing-GoldenUnit)) * -1)!important}
 .x16z1lm9{margin-top:-7px}
-.x11tiu5i{max-width:220px!important}
+.xp3vwao{margin-top:var(--spacing-Full)}
+.xgdlz2r{max-width:var(--dropdown-content-width)!important}
 .x1o1nzlu{min-height:15px}
 .xbhpgbg{min-height:var(--minHeight)}
 .xeuugli{min-width:0}
 .x6taa2c{min-width:15px}
 .xanjte{padding-left:var(--fontSize-Base)}
+.x1nd6s1w{padding-right:0!important}
 .x1hb41fa{padding-right:var(--paddingRight)}
 .x104jpfm{right:-7px}
 .x3m8u43{right:0}
@@ -176,9 +198,11 @@ html[dir='rtl'] .x1p9coah:focus-visible{box-shadow:14px 0 0 0 var(--colors-Contr
 .x6jxa94{width:14px}
 .x17tiq77{width:15%}
 .x1i1rx1s{width:1px}
-.x1u9j7jb{width:auto!important}
+.x1849jeq{width:30px}
 .x121bxxz{width:calc(100% - 15px)}
-.x1cxt36h{width:max-content!important}
+.xl25owk{width:calc(var(--spacing-Full) * 2 + 100%)}
+.x9fp9d9{width:var(--dropdown-content-width)!important}
+.xapn7li{width:var(--dropdown-header-width)!important}
 .x1bl4301{width:var(--width)}
 }
 @layer priority6{
