Update: Render files

--- a/Resources/Public/Editor.css
+++ b/Resources/Public/Editor.css
@@ -11,6 +11,7 @@
 .x1md70p1{background:transparent}
 .xkcvqor{background:var(--colors-ContrastBrightest)}
 .x978ut8{background:var(--colors-ContrastDarker)}
+.x178jugr{background:var(--colors-ContrastDarkest)}
 .x12t7z44{background:var(--colors-ContrastNeutral)}
 .x1u657s8{background:var(--colors-PrimaryBlue)}
 .x1wty727{border:0}
@@ -41,8 +42,10 @@
 .x1717udv{padding:0}
 .xzdscax{padding:var(--spacing-Full)!important}
 .x1i724xb{padding:var(--spacing-Full)}
+.xu0uvaq{padding:var(--spacing-Half) var(--spacing-Full)}
 .xedylmv{padding:var(--spacing-Quarter) var(--spacing-Half)}
 .x1ly45rb:where(*)>*{grid-area:content}
+.x1y4g52z:hover{background:var(--colors-PrimaryBlue)}
 .x11vc74w:focus{background:var(--colors-ContrastBrightest)}
 }
 @layer priority3{
@@ -71,6 +74,7 @@
 .x2lu7ux{transition:opacity var(--transition-Default)}
 .xtkkc6t:is(*)>.react-colorful__last-control{border-radius:0 0 2px 2px!important}
 .x17io97:is(*)>.react-colorful__saturation{border-radius:2px 2px 0 0!important}
+.x1rhqzh7:not(:first-child){border-top:1px solid var(--colors-ContrastNeutral)}
 .x1curdr6:where(:hover,:focus){outline:0}
 .xkwbyna:focus-visible{outline:0}
 .xvvq1ej:focus-visible{outline:1px solid var(--colors-PrimaryBlue)!important}
@@ -100,6 +104,7 @@
 .x1ypdohk{cursor:pointer}
 .x1ed109x{cursor:text}
 .x1jn3k19{cursor:var(--cursor)}
+.x11xutdi{display:block!important}
 .x1lliihq{display:block}
 .xjp7ctv{display:contents}
 .x78zum5{display:flex}
@@ -109,10 +114,15 @@
 .xdt5ytf{flex-direction:column}
 .x15zctf7{flex-direction:row-reverse}
 .x1a02dak{flex-wrap:wrap}
+.xt1x0nq{font-family:var(--fontFamily)}
+.xosj86m{font-size:18px}
 .xwsyq91{font-size:20px}
 .x1qlqyl8{font-size:inherit}
 .xk07rqz{font-size:var(--fontSize-Base)}
 .x8cklmd{font-size:var(--fontSize-Small)}
+.x1sgc6b7{font-style:var(--fontStyle)}
+.x1xlr1w8{font-weight:700}
+.x1oq5gaa{font-weight:var(--fontWeight)}
 .xnby9oq{grid-template-columns:repeat(2,minmax(0,1fr))}
 .x1lq8ota{grid-template-rows:var(--gridTemplateRows)}
 .xl56j7k{justify-content:center}
@@ -122,6 +132,8 @@
 .x1o2pa38{justify-items:center}
 .x1159mfc{line-height:1.1}
 .x1u7k74{line-height:1.2}
+.xo5v014{line-height:1}
+.xklk4pu{line-height:30px}
 .x1hld986{line-height:var(--spacing-GoldenUnit)}
 .x190dgpg{opacity:.65}
 .xg01cxk{opacity:0}
@@ -135,11 +147,13 @@
 .xdpxx8g{text-align:left}
 .x1hr2gdg{text-align:right}
 .xlyipyv{text-overflow:ellipsis}
+.xtvhhri{text-transform:uppercase}
 .x1a33avv{transform:scale(.5)}
 .x1xih9zl{transform:translate(-50%,calc(-100% - 6px))}
 .x1dpvuo6{transform:translateX(-100%) translateX(var(--dropdown-header-width))}
 .x1uosm7l{transform:var(--transform)}
 .x87ps6o{user-select:none}
+.x11lge8g{visability:hidden}
 .xuxw1ft{white-space:nowrap}
 .x1vjfegm{z-index:1}
 html:not([dir='rtl']) .x1p9coah:focus-visible{box-shadow:-14px 0 0 0 var(--colors-ContrastNeutral),-14px 0 0 1px var(--colors-PrimaryBlue),0 0 0 1px var(--colors-PrimaryBlue)}
@@ -153,6 +167,7 @@ html[dir='rtl'] .x1p9coah:focus-visible{box-shadow:14px 0 0 0 var(--colors-Contr
 .x108nfvm:where(*)>svg{opacity:var(--1ifsx55)}
 .x1ygtta1:not(:hover)>*{opacity:var(--1lsze8t)}
 .xvszx66:where(*)>*{pointer-events:none}
+.xca8h9q:only-child{display:none}
 .x1awz5i3:focus{color:var(--colors-ContrastDarkest)}
 .xch2mbi:active{cursor:grabbing}
 }
@@ -167,6 +182,7 @@ html[dir='rtl'] .x1p9coah:focus-visible{box-shadow:14px 0 0 0 var(--colors-Contr
 .x1v9usgg{height:14px}
 .xjm9jq1{height:1px}
 .x1gnnpzl{height:30px}
+.x1vqgdyp{height:40px}
 .xmydgjh{height:65%}
 .xwzfr38{height:80px}
 .xt7dq6l{height:auto}
@@ -179,14 +195,19 @@ html[dir='rtl'] .x1p9coah:focus-visible{box-shadow:14px 0 0 0 var(--colors-Contr
 .x1b973y9{margin-left:-7px}
 .x5jszgg{margin-left:calc(-15% + 2px)}
 .xd2cifw{margin-left:calc((var(--spacing-Quarter) + var(--spacing-GoldenUnit)) * -1)!important}
+.x1jstro9{margin-left:calc(var(--spacing-Full) * -1)}
+.xcd9gkm{margin-right:var(--spacing-Full)}
 .x16z1lm9{margin-top:-7px}
 .xp3vwao{margin-top:var(--spacing-Full)}
 .xgdlz2r{max-width:var(--dropdown-content-width)!important}
 .x1o1nzlu{min-height:15px}
 .xbhpgbg{min-height:var(--minHeight)}
+.xrugqim{min-height:var(--spacing-GoldenUnit)}
 .xeuugli{min-width:0}
 .x6taa2c{min-width:15px}
+.x101abm8{overflow-x:clip}
 .xanjte{padding-left:var(--fontSize-Base)}
+.x2kegb5{padding-left:var(--spacing-Full)}
 .x1nd6s1w{padding-right:0!important}
 .x1hb41fa{padding-right:var(--paddingRight)}
 .x104jpfm{right:-7px}
@@ -200,6 +221,7 @@ html[dir='rtl'] .x1p9coah:focus-visible{box-shadow:14px 0 0 0 var(--colors-Contr
 .x1i1rx1s{width:1px}
 .x1849jeq{width:30px}
 .x121bxxz{width:calc(100% - 15px)}
+.x10nwz3g{width:calc(100% + var(--spacing-Full))}
 .xl25owk{width:calc(var(--spacing-Full) * 2 + 100%)}
 .x9fp9d9{width:var(--dropdown-content-width)!important}
 .xapn7li{width:var(--dropdown-header-width)!important}
